--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+* {
+  background-color: #05866a;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 5vmin;
   pointer-events: none;
 }
 
@@ -14,18 +18,26 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+  height: 10vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+  padding: 10px;
+  }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-main {
+  height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @keyframes App-logo-spin {
